# kaggle-housing-prices

./: .gitignore  AdaBoostRegressor.csv  GradientBoostingRegressor.csv  LinearRegression.csv  MetaModel.csv  README.md  RandomForestRegressor.csv  SVR.csv  XGBRegressor.csv  descriptive (old).ipynb  descriptive.ipynb  development.ipynb  inductive.ipynb  kaggle_scorer.py  main.ipynb  pyproject.toml  test_processed.csv  train_processed.csv  utility.py
.ipynb_checkpoints/: AdaBoostRegressor-checkpoint.csv  GradientBoostingRegressor-checkpoint.csv  LinearRegression-checkpoint.csv  MetaModel-checkpoint.csv  RandomForestRegressor-checkpoint.csv  XGBRegressor-checkpoint.csv  descriptive-checkpoint.ipynb  development-checkpoint.ipynb  inductive-checkpoint.ipynb  main-checkpoint.ipynb  test_processed-checkpoint.csv  train_processed-checkpoint.csv
src/kaggle_housing_prices/pipeline/: price_prediction_model.py
src/kaggle_housing_prices/process/: feature_engineering.py  preprocessing.py  regression.py
src/kaggle_housing_prices/scripts/: prototype.py
test/: kaggle_housing_prices_test.py
